[package]
name = "xrd-data-analyzer"
version = "0.1.0"
authors = ["nils sabelstrom <nilssab@gmail.com>"]
edition = "2018"
description = "Tool for analyzing XRD data, with Pearson VII peak fitting"
readme = "README.md"
repository = "https://github.com/nilssab/xrd-peak-analyzer/"
license = "MIT"

[dependencies]
